alignment issues fixed

--- a/src/Components/Contact/Contact.scss
+++ b/src/Components/Contact/Contact.scss
@@ -14,6 +14,7 @@
 
 #details-header {
 	color: $blue;
+	font-size: 32px;
 }
 
 #details-blurb {
