--- a/src/pages/Packages/Packages.scss
+++ b/src/pages/Packages/Packages.scss
@@ -8,14 +8,19 @@
 	margin: 50px 0;
 }
 
-#package-button {
+p {
+	width: 100%;
+}
+.package-button {
 	background-color: $blue;
 	border: 0px solid $black;
 	border-radius: 15px;
 	text-align: center;
-	margin: 20px 0;
-	width: fit-content;
+	margin: 10px 0;
+	// padding: 10px;
 	box-shadow: 2px 2px;
+	font-size: 20.8px;
+	width: auto;
 }
 
 #link {
@@ -50,7 +55,8 @@
 #onboarding-price {
 	margin-bottom: 0;
 	margin-top: 16px;
-	font-size: 22px;
+	font-size: 20.8px;
+	text-align: center;
 }
 
 #systemization-package,
@@ -84,6 +90,14 @@ h5 {
 	flex-direction: row-reverse;
 }
 
+.word-side {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	align-items: center;
+	text-align: left;
+}
+
 @media only screen and (min-width: 860px) {
 	.packages {
 		text-align: left;
@@ -105,6 +119,7 @@ h5 {
 		flex-direction: column;
 		width: 45%;
 		align-items: center;
+		text-align: left;
 	}
 
 	#onboarding-package,
@@ -129,5 +144,16 @@ h5 {
 		flex-direction: column;
 		align-items: center;
 		justify-content: space-evenly;
+	}
+
+	.package-button {
+		background-color: $blue;
+		border: 0px solid $black;
+		border-radius: 15px;
+		text-align: center;
+		margin: 10px 0;
+		box-shadow: 2px 2px;
+		font-size: 20.8px;
+		width: auto;
 	}
 }
